uwp auth working with aad b2c

--- a/clients/uwp/App2/MainWindow.xaml
+++ b/clients/uwp/App2/MainWindow.xaml
@@ -7,7 +7,12 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Button Grid.Row="0" x:Name="myButton" Click="myButton_Click">Click Me</Button>
+        <TextBox Grid.Row="1" x:Name="ResultText" TextWrapping="Wrap" Margin="5" FontFamily="Segoe Ui" />
+    </Grid>
 </Window>
